--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Researcher
+name: Rujia Wang's Homepage
 description: Personal website
 menu:
  - page: About
@@ -39,16 +39,12 @@ menu:
  - page: Accolades
    url: /accolades
 menu_external:
- - title: OleVik.me
-   url: "http://olevik.me/"
- - title: Research Gate
-   url: "https://www.researchgate.net/profile/Ole_Vik"
- - title: LinkedIn
-   url: "https://no.linkedin.com/in/olehhvik"
- - title: Twitter
-   url: "https://twitter.com/olehhv"
+ - title: CS@Illinois Institute of Technology
+   url: "https://science.iit.edu/computer-science"
+ - title: Group page
+   url: "TBA"
 mathjax: false
 markdown: kramdown
 encoding: utf-8
-baseurl: 
+baseurl: rujiawang.github.io
 locale: en_GB
