Committer: Rujia Wang <faintfay@MacBook-Aloha.local>
 On branch master
 Your branch is up to date with 'origin/master'.
 Changes to be committed:
	modified:   _config.yml
	deleted:    about.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,10 @@
 name: Rujia Wang
 description: Personal website
 menu:
- - page: About
-   url: /about
+ - page: Home
+   url: /
  - page: Publications
-   url: /papers
-   links:
-    - title: Working papers
-      url: "#working-papers"
-    - title: Published papers
-      url: "#published-papers"
+   url: /publications
  - page: Research Projects
    url: /research
 <!-- - page: Curriculum Vitae -->
