--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Rujia Wang
-description: Rujia Wang's Personal website and Homepage
+name: Rujia Wang - Homepage
+description: Rujia Wang's Personal Website and Homepage
 menu:
  - page: Home
    url: /
