Changes to be committed: 	modified:   _config.yml 	modified:   index.md 	new file:   research.md 	modified:   teaching.md

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ menu:
    url: /
  - page: Publications
    url: /publications
+ - page: Research
+   url: /research
  - page: Teaching
    url: /teaching
  - page: Services
